force-app/main/default/objects/CaseAccount__c/CaseAccount__c.object-meta.xml
<CustomObject>
    <label>Case Account</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Side #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>