force-app/main/default/objects/CaseAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Site the case should be linked to</description>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Cases</relationshipLabel>
    <relationshipName>CaseSites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>