force-app/main/default/objects/CaseAccount__c/fields/AccountConnection__c.field-meta.xml
<CustomField>
    <fullName>AccountConnection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to Account Connection for Offset calculation</inlineHelpText>
    <label>Account Connection</label>
    <referenceTo>AccountConnection__c</referenceTo>
    <relationshipLabel>Case Accounts</relationshipLabel>
    <relationshipName>CaseAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>