force-app/main/default/objects/CaseAccount__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Case the sites should be linked ot</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>CaseSites</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>