force-app/main/default/objects/CaseAccount__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Role the account is fulfilling on the case</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PATIENT</fullName>
                <label>Patient</label>
            </value>
            <value>
                <fullName>SITE</fullName>
                <label>Site</label>
            </value>
            <value>
                <fullName>TEAM</fullName>
                <label>Team</label>
            </value>
            <value>
                <fullName>APH</fullName>
                <label>Apheresis</label>
            </value>
            <value>
                <fullName>PICK</fullName>
                <label>Pick Up</label>
            </value>
            <value>
                <fullName>PLANT</fullName>
                <label>Plant</label>
            </value>
            <value>
                <fullName>REL</fullName>
                <label>Release Hub</label>
            </value>
            <value>
                <fullName>SHIP</fullName>
                <label>Delivery</label>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>